# ST2D

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SFMLTestbed.cpp  SFMLTestbed.h  xmake.lua
Core/: CMakeLists.txt
Core/Source/: SFMLTestbedCore.h  ST2DCore.h  pch.h
Core/Source/SFMLTestbed/: Common.h  Core.h  Log.h
Core/Source/ST2D/: Common.h  Core.cpp  Core.h  IdPool.cpp  IdPool.h  Log.cpp  ObjectPool.cpp  ObjectPool.h  ThreadPool.h
Core/Source/ST2D/Algorithms/: Algorithm2D.cpp  Algorithm2D.h
Core/Source/ST2D/Collision/: AbstractBroadphase.h  DynamicBVT.cpp  DynamicBVT.h  DynamicGrid.cpp  DynamicGrid.h  Narrowphase.cpp  Narrowphase.h  ObjectGraph.cpp  ObjectGraph.h  Simplex.cpp  Simplex.h
Core/Source/ST2D/Geometry/Algorithms/: Algorithm2D.cpp  Algorithm2D.h
Core/Source/ST2D/Geometry/Collision/: Narrowphase.cpp  Narrowphase.h  Simplex.cpp  Simplex.h  SweepAndPrune.cpp  SweepAndPrune.h  Tree.cpp  Tree.h  UniformGrid.cpp  UniformGrid.h
Core/Source/ST2D/Geometry/Shape/: AABB.cpp  AABB.h  Capsule.cpp  Capsule.h  Edge.cpp  Ellipse.cpp  Polygon.cpp  Rectangle.cpp  Rectangle.h  Shape.h
Core/Source/ST2D/Math/: Complex.cpp  Complex.h  Math.h  Matrix2x2.cpp  Matrix2x2.h  Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Core/Source/ST2D/Physics/: Contact.cpp  Contact.h  PhysicsWorld.cpp  PhysicsWorld.h
Core/Source/ST2D/Shape/: AABB.cpp  AABB.h  Circle.cpp  Circle.h  Edge.cpp  Edge.h  Ellipse.cpp  Ellipse.h  Polygon.cpp  Polygon.h  Shape.h
Core/Source/ST2D/Utility/: Easing.cpp  Easing.h
Editor/: CMakeLists.txt
Editor/Resource/Shaders/: frag-font.glsl  frag-round-point.glsl  geom.glsl  vert-font.glsl  vert-graphics.glsl  vert-instanced-graphics.glsl  vert-round-point.glsl  vert.glsl  vert2d.glsl
Editor/Source/: AbstractScene.h  Camera2D.cpp  Camera2D.h  Palette.cpp  Palette.h  ReferenceLayer.cpp  ReferenceLayer.h  Render.cpp  Render.h  RenderSFMLImpl.cpp  RenderSFMLImpl.h  Renderer2D.cpp  Renderer2D.h  SFMLTestbed.cpp  SFMLTestbed.h  ST2DEditor.cpp  ST2DEditor.h  ShaderProgram.cpp  ShaderProgram.h  main.cpp
Editor/Source/Scenes/: AbstractCurve.h  BroadphaseScene.cpp  BroadphaseScene.h  Curve.cpp  Curve.h  CurveScene.cpp  CurveScene.h  EmptyScene.cpp  EmptyScene.h  HelloWorldScene.cpp  HelloWorldScene.h  NarrowphaseScene.cpp  NarrowphaseScene.h  PhysicsScene.cpp  PhysicsScene.h  SpiralScene.cpp  SpiralScene.h  Spline.cpp  Spline.h  SplineScene.cpp  SplineScene.h
